# ONScripter-EN

./: .gitignore  AVIWrapper.cpp  AVIWrapper.h  CMakeLists.txt  DirectReader.cpp  MadWrapper.cpp  ONScripterLabel.cpp  ONScripterLabel.h  ONScripterLabel_command.cpp  ONScripterLabel_event.cpp  ONScripterLabel_image.cpp  ONScripterLabel_rmenu.cpp  ONScripterLabel_sound.cpp  ONScripterLabel_text.cpp  graphics_cpu.h  onscripter.cpp  resize_image.cpp  resize_image.h
msys2/: Makefile.Windows.MSYS2.x86-64.insani
